Descrizione delle modi

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Landing - Atterraggio Astronave</title>
+    <style> </style>
 </head>
 <body>
-    
+    <div id="game-container">
+        <div id="spaceship"></div>
+        <div id="platform"></div>
+        <div id="message">
+            <h2>Vittoria!</h2>
+            <p>Hai atterrato l'astronave sulla piattaforma!</p>
+            <button id="restart-btn">Gioca ancora</button>
+        </div>
+        <div id="instructions">
+            Usa le frecce ← → o i tasti A e D per muovere l'astronave
+        </div>
+    </div>
+
+    <script scr="script.js"></script>
+
 </body>
 </html>
