--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Landing - Atterraggio Astronave</title>
-    <style> </style>
+    <style src="style.css"> </style>
 </head>
 <body>
     <div id="game-container">
